Bug 258269 - Tellico crashes with a bibtex file
Summary: Tellico crashes with a bibtex file
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.1
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-29 11:13 UTC by David Kremer
Modified: 2010-12-02 06:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
This file with many bibtex entries makes tellico crash. (2.79 KB, text/x-bibtex)
2010-11-29 11:13 UTC, David Kremer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Kremer 2010-11-29 11:13:45 UTC
Created attachment 53849 [details]
This file with many bibtex entries makes tellico crash.

Version:           2.3.1 (using KDE 4.5.4) 
OS:                Linux

Tellico is crashing with my bibtex file. 


Reproducible: Always

Steps to Reproduce:

*go to "File->Import->Import bibtex data"
*give the file in attachment, select "Merge" or "Add" 
*click "ok"

Actual Results:  
it crashes with a segfault.


Expected Results:  
Add or merge entries in the bibtex file with the current ones in Tellico.

It doesn't append with some other bibtex files, but just that one.
Comment 1 Robby Stephenson 2010-12-02 06:37:59 UTC
SVN commit 1202737 by rstephenson:

Fix bug with importing Bibtex files with both "keyword" and "keywords" fields.

One willl now get overwritten. Perhaps they should be merged instead?

BUG:258269


 M  +4 -0      ChangeLog  
 M  +6 -4      src/collections/bibtexcollection.cpp  
 M  +1 -1      src/collections/bibtexcollection.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1202737