Fix bug with importing Bibtex files with both "keyword" and "keywords" fields.

One willl now get overwritten. Perhaps they should be merged instead?

BUG:258269

svn path=/trunk/extragear/office/tellico/; revision=1202737